Solved generate table

--- a/docker-compose/nginx/nginx.conf
+++ b/docker-compose/nginx/nginx.conf
@@ -6,13 +6,18 @@ http {
   upstream match-serve {
   server match-serve:8086;
 }
+upstream pocketbase {
+    server 192.168.1.15:8090;
+}
 
 server {
   listen 80;
+        location / {
+        proxy_pass http://match-serve;
+    }
 
-  location / {
-    proxy_pass http://match-serve;
-  }
+    location /api {
+        proxy_pass http://pocketbase;
+    }
 }
-
 }
